# ai-autoshell

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_PROGRESS.md  README.md  USAGE.md  ai-autoshellrc.example
.github/workflows/: build.yml
docs/: ai.md  architecture.md  config.md  grammar.md  roadmap.md
examples/: hello.ash
include/ai-autoshell/ai/: json_plan.hpp  llm.hpp  planner.hpp
include/ai-autoshell/exec/: builtins.hpp  executor_posix.hpp  executor_win.hpp  job.hpp  path.hpp  redir.hpp
include/ai-autoshell/expand/: expand.hpp
include/ai-autoshell/lex/: lexer.hpp
include/ai-autoshell/line/: completion_colors.hpp  line_editor.hpp
include/ai-autoshell/parse/: ast.hpp  parser.hpp  tokens.hpp
src/: main.cpp  main_script.cpp
src/ai/: json_plan.cpp  llm.cpp  llm_claude.cpp  llm_gemini.cpp  llm_ollama.cpp  llm_openai.cpp  planner.cpp
src/exec/: builtins.cpp  executor_posix.cpp  executor_win.cpp  job.cpp  path.cpp  redir.cpp
src/expand/: expand.cpp
src/lex/: lexer.cpp
src/line/: completion_colors.cpp  line_editor.cpp
src/parse/: parser.cpp
tests/: test_command_subst.cpp  test_executor.cpp  test_expand.cpp  test_glob.cpp  test_jobs.cpp  test_jobs_advanced.cpp  test_lexer.cpp  test_parser.cpp  test_planner.cpp  test_subshell.cpp
